Added system test for the Stimulus behavior
Since we're about to revise a significant piece of the UI, we'd better
be covered.

--- a/test/fixtures/characters.yml
+++ b/test/fixtures/characters.yml
@@ -1,23 +1,5 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-one:
+tengri:
   finalized: false
-  player: MyString
-  name: MyString
-  role: MyString
-  origins: MyString
-  personality: MyString
-  clothing: MyString
-  hairstyle: MyString
-  affectation: MyString
-
-two:
-  finalized: false
-  player: MyString
-  name: MyString
-  role: MyString
-  origins: MyString
-  personality: MyString
-  clothing: MyString
-  hairstyle: MyString
-  affectation: MyString
+  player: Mike
+  name: Tengri
+  role: Fixer
