Updated & applied Rubocop rules
I couldn't help be change the suggested rules (as I should).

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,3 +2,11 @@
 inherit_gem:
   rubocop-rails-omakase: rubocop.yml
 
+Layout/SpaceInsideArrayLiteralBrackets:
+  EnforcedStyle: no_space
+
+Style/PercentLiteralDelimiters:
+  Enabled: false
+
+Rails/RefuteMethods:
+  EnforcedStyle: refute
