Added a route, controller action, embryo of view

--- a/test/fixtures/characters.yml
+++ b/test/fixtures/characters.yml
@@ -3,3 +3,8 @@ tengri:
   player: Mike
   name: Tengri
   role: Fixer
+tteoksoon_spa:
+  finalized: true
+  player: GM
+  name: Tteoksoon Spa
+  role: Solo
